# hoomd3_phosphorylation

./: #pyproject.toml#  README.md  config_utilities.py  contacts_analysis.ipynb  create_CA_com_pdb_from_allatom.py  create_CA_com_pdb_from_allatom_pdb.py  create_init_configuration.py  create_rigid_body.py  gsd_script.py  hoomd3_ck1d_tdp43_hps.py  hoomd_util.py  input0.in  main.py  mda_script.py  pyproject.toml  pyproject.toml~  template
example/: .nfs000000000094c87e000001b7  activeCK1d_SER_exl0_dump.dcd  activeCK1d_SER_exl4_dump.dcd  ck1d-rigid_tdp43_ex0_dump.gsd  ck1d-rigid_tdp43_ex0_log.gsd  ck1d-rigid_tdp43_ex4_log.gsd  restart_tmp1_exl0.gsd  restart_tmp1_exl4.gsd  restart_tmp2_exl0.gsd  restart_tmp2_exl4.gsd
input_stats/: activeCK1d_SER_start.gsd  ck1d-center-rescaled_multi-tdp43_start.gsd  ck1d-center_tdp43_start.gsd  ck1d-rigid-rescaled_multi-tdp43_start.gsd  ck1d-rigid_tdp43_start.gsd  ex0_ck1d-rigid-rescaled_multi-tdp43_end.gsd  ex0_ck1d-rigid_multi-tdp43_end.gsd  input_template.in  input_template.in~  multi-tdp43_start.gsd  sys_ck1d_tdp43_ser19.dat~
multi-tau/: create_init_config_multi-tau.py  create_rigid_body_enzyme_multi-tau.py  hoomd2_therm_ck1d_multi-tau_hps.py  hoomd3_ck1d_multi-tau_hps-cp-r.py  hoomd3_ck1d_multi-tau_hps.py  hoomd3_enzyme_multi-tau_hps.py  hoomd_util.py
multi-tdp43/: ck1d-rigid_multi-tdp43_exl0_contacts.txt  create_init_config_multi-tdp43.py  create_init_configuration.py  create_init_configuration.py~  create_input.sh  create_rigid_body_rescaled.py  hoomd3_ck1d_multi-tdp43_hps-cp-r.py  hoomd3_ck1d_multi-tdp43_hps.py  template  (+1 more)
(+145 files in other folders)
