[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hps_phosphorylation"
version = "0.1.0"
authors = [
  { name="Emanuele Zippo", email="zippoema@uni-mainz.de" },
]
description = "hps phosphorylation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ezippo/hoomd3_phosphorylation"